<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supervise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liuinc.waterqualitysystem.MainActivity$MonitorFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tab1_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/tab1_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/spinner" />

    <Button
        android:id="@+id/tab1_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_add"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_add" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tab1_text_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/tab1_button_temp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_temperature"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/tab1_button_pH"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_pH"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_temp"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_temp" />

    <Button
        android:id="@+id/tab1_button_NH3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_NH3"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_pH"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_pH" />

    <Button
        android:id="@+id/tab1_button_DO"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_DO"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_NH3"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_NH3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/tab1_text_measure"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tab1_text_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="8.5"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tab1_text_alarm_field_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/tab1_image_view_normal"
        android:layout_width="44dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/screen1_img_normal"
        app:layout_constraintBottom_toTopOf="@+id/tab1_button_60m"
        app:layout_constraintStart_toEndOf="@+id/tab1_text_measure"
        app:layout_constraintTop_toBottomOf="@+id/tab1_button_pH"
        android:contentDescription="@string/tab1_text_connect_status_image_view_description"/>

    <Button
        android:id="@+id/tab1_button_30m"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_30m"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/tab1_button_60m"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_60m"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_30m"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_30m" />

    <Button
        android:id="@+id/tab1_button_8H"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_8H"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_60m"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_60m" />

    <Button
        android:id="@+id/tab1_button_24H"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab1_text_24H"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab1_button_8H"
        app:layout_constraintStart_toEndOf="@+id/tab1_button_8H" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tab1_text_interval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <WebView
        android:id="@+id/tab1_webview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</android.support.constraint.ConstraintLayout>