<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supervise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liuinc.waterqualitysystem.MainActivity$SettingsFragment">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/scene4_text_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_warn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scene4_text_alias" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_temp_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_pH_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_NH3_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_OD_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tab4_text_alarm_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/tab4_edText_tmpLow"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_temperature_low"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab4_text_tilde"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab4_edText_tmpLow"
        app:layout_constraintStart_toEndOf="@+id/tab4_edText_tmpLow" />

    <EditText
        android:id="@+id/tab4_edText_tmpHigh"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_temperature_high"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/textView27" />

    <EditText
        android:id="@+id/tab4_edText_pHLow"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_ph_low"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab4_text_tilde"
        app:layout_constraintBaseline_toBaselineOf="@+id/tab4_edText_pHLow"
        app:layout_constraintStart_toEndOf="@+id/tab4_edText_pHLow" />

    <EditText
        android:id="@+id/tab4_edText_pHHigh"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_ph_high"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28" />

    <EditText
        android:id="@+id/tab4_edText_pH4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_ph4_low"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/tab4_edText_DO"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tab4_text_do_high"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Switch
        android:id="@+id/tab4_switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tab4_text_switch_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/tab4_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab4_switch_alarm" />

</android.support.constraint.ConstraintLayout>